# spotlight

./: AGENTS.md  CLAUDE.md  eslint.config.js  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.opencode/skills/agents-md-updater/: SKILL.md
.opencode/skills/agents-md-updater/scripts/: update_agents_md.py
.opencode/skills/code-review/: SKILL.md
.opencode/skills/git-commit/: SKILL.md
.opencode/skills/git-commit/scripts/: git_commit.py
scripts/: auto-find-duplicate.ps1  auto-fix-bug.ps1  auto-fix-mac.ps1  extract-icons.cjs
src/: App.vue  main.js  plugins.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs
src-tauri/src/commands/: ai.rs  apps.rs  autostart.rs  chrome.rs  clipboard.rs  everything.rs  file.rs  launcher.rs  log.rs  mod.rs  screen.rs  search.rs  search_test.rs  shell.rs  shortcut.rs  storage.rs  window.rs
src-tauri/src/commands/window/window_manager/: child_webview.rs  mod.rs
src-tauri/src/commands/window_manager/: child_webview.rs  mod.rs
src-tauri/src/utils/: color.rs  icon.rs  logger.rs  mod.rs  registry.rs
src/__mocks__/: fileApi.ts
src/api/: tauri.ts
src/components/: SearchInput.vue  SearchList.vue
src/composables/: index.ts  usePlugins.ts  useTray.ts  useWindowFocus.ts  useWindowResize.ts
src/plugins/: base.ts  index.ts  registry.ts  types.ts
src/plugins/builtins/: samplePlugin.ts
src/plugins/builtins/app-search-plugin/: index.ts
src/plugins/builtins/sample-plugin/: index.ts
src/plugins/color-picker/: color-picker.ts
src/router/: index.ts
src/styles/: variables.css
